terraform/route tables.tf
resource "aws_route_table" "public" {

  vpc_id = aws_vpc.main.id
  tags = {
    Name = "dev_asgnment_route_table_public"
  }
}

resource "aws_route_table" "private" {

  vpc_id = aws_vpc.main.id
  tags = {
    Name = "dev_asgnment_route_table_private"
  }
}

resource "aws_route" "internet" {

  route_table_id         = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.main.id
}
resource "aws_route_table_association" "public1" {
  subnet_id      = aws_subnet.public_1.id
  route_table_id = aws_route_table.public.id
}
resource "aws_route_table_association" "public2" {
  subnet_id      = aws_subnet.public_2.id
  route_table_id = aws_route_table.public.id
}
resource "aws_route_table_association" "private1" {
  subnet_id      = aws_subnet.private_1.id
  route_table_id = aws_route_table.private.id
}
resource "aws_route_table_association" "private2" {
  subnet_id      = aws_subnet.private_2.id
  route_table_id = aws_route_table.private.id
}
